# superplacedai

./: .env.vercel  .gitignore  README.md  middleware.ts  package-lock.json  package.json  rebrand.js
app/agents/resume-analyzer/rendercv/: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  justfile  mkdocs.yaml  pyproject.toml  schema.json
app/agents/resume-analyzer/rendercv/.claude/: settings.json
app/agents/resume-analyzer/rendercv/.claude/skills/publish-rendercv-typst-package/: SKILL.md
app/agents/resume-analyzer/rendercv/.claude/skills/rendercv-development-context/: SKILL.md
app/agents/resume-analyzer/rendercv/.claude/skills/rendercv-testing-context/: SKILL.md
app/agents/resume-analyzer/rendercv/.claude/skills/review-rendercv-pr/: SKILL.md
app/agents/resume-analyzer/rendercv/.claude/skills/solve-rendercv-issue/: SKILL.md
app/agents/resume-analyzer/rendercv/.claude/skills/triage-rendercv-issue/: SKILL.md
app/agents/resume-analyzer/rendercv/.devcontainer/: Dockerfile  devcontainer.json
app/agents/resume-analyzer/rendercv/.github/: CONTRIBUTING.md  FUNDING.yaml
app/agents/resume-analyzer/rendercv/.github/workflows/: claude-issue-triage.yaml  claude-pr-review.yaml  claude.yaml  create-executables.yaml  deploy-docs.yaml  release.yaml  test.yaml
app/agents/resume-analyzer/rendercv/docs/: CNAME  ats_compatibility.md  changelog.md  docs_templating.py  index.md  llms.txt
app/agents/resume-analyzer/rendercv/docs/api_reference/: api_reference.py  index.md
app/agents/resume-analyzer/rendercv/docs/assets/javascripts/: rendercv-logo.js
app/agents/resume-analyzer/rendercv/docs/assets/stylesheets/: rendercv.css
app/agents/resume-analyzer/rendercv/docs/developer_guide/: dockerfile.md  documentation.md  github_workflows.md  index.md  json_schema.md  project_management.md  testing.md  understanding_rendercv.md
app/agents/resume-analyzer/rendercv/docs/developer_guide/how_to/: add_locale.md  add_social_network.md  add_theme.md
app/agents/resume-analyzer/rendercv/docs/overrides/partials/: header.html  logo.html  tabs-item.html
app/agents/resume-analyzer/rendercv/docs/user_guide/: cli_reference.md  index.md  sample_entries.yaml
app/agents/resume-analyzer/rendercv/docs/user_guide/how_to/: arbitrary_keys_in_entries.md  custom_fonts.md  override_default_templates.md  set_up_vs_code_for_rendercv.md  use_the_ai_agent_skill.md
app/agents/resume-analyzer/rendercv/docs/user_guide/yaml_input_structure/: cv.md  design.md  index.md  locale.md  settings.md
app/agents/resume-analyzer/rendercv/examples/: John_Doe_EmberTheme_CV.yaml  John_Doe_EngineeringclassicTheme_CV.yaml  John_Doe_EngineeringresumesTheme_CV.yaml  John_Doe_HarvardTheme_CV.yaml  John_Doe_InkTheme_CV.yaml  John_Doe_ModerncvTheme_CV.yaml  John_Doe_OpalTheme_CV.yaml  John_Doe_Sb2novTheme_CV.yaml
app/agents/resume-analyzer/rendercv/examples/output_Opal/: John_Doe_CV.typ
app/agents/resume-analyzer/rendercv/scripts/: create_executable.py  update_entry_figures.py  update_examples.py  update_schema.py
app/agents/resume-analyzer/rendercv/scripts/ats_proof/: analyze_pdfs.py  ats_compatibility.j2.md  common.py  evaluate.py  generate_report.py  pyproject.toml  render_pdfs.py  run_all.py  submit_commercial.py
app/agents/resume-analyzer/rendercv/scripts/ats_proof/corpus/baseline/: minimal.yaml  standard_full.yaml
app/agents/resume-analyzer/rendercv/scripts/ats_proof/corpus/edge_cases/: diacritics.yaml
app/agents/resume-analyzer/rendercv/scripts/ats_proof/corpus/stress_tests/: academic.yaml
app/agents/resume-analyzer/rendercv/scripts/rendercv_skill/: generate.py  skill_template.j2.md
app/agents/resume-analyzer/rendercv/scripts/rendercv_skill/evals/: promptfooconfig.yaml
app/agents/resume-analyzer/rendercv/scripts/rendercv_skill/evals/fixtures/: sample_cv_text.txt
app/agents/resume-analyzer/rendercv/scripts/rendercv_skill/evals/prompts/: skill_chat.js
app/agents/resume-analyzer/rendercv/src/rendercv/: __init__.py  __main__.py  exception.py
app/agents/resume-analyzer/rendercv/src/rendercv/cli/: app.py  copy_templates.py  entry_point.py  error_handler.py
app/agents/resume-analyzer/rendercv/src/rendercv/renderer/: html.py  markdown.py  path_resolver.py  pdf_png.py  typst.py
app/agents/resume-analyzer/rendercv/src/rendercv/schema/: error_dictionary.yaml  json_schema_generator.py  override_dictionary.py  pydantic_error_handling.py  rendercv_model_builder.py  sample_content.yaml  sample_generator.py  variant_pydantic_model_generator.py  yaml_reader.py
app/agents/resume-analyzer/rendercv/tests/: conftest.py  test_generated_files.py  test_main.py  test_offline_whl.py  test_pyodide.py  test_tests.py
app/agents/resume-analyzer/rendercv/tests/cli/: test_app.py  test_copy_templates.py  test_entry_point.py  test_error_handler.py
app/agents/resume-analyzer/rendercv/tests/cli/create_theme_command/: test_create_init_file_for_theme.py  test_create_theme_command.py
app/agents/resume-analyzer/rendercv/tests/cli/new_command/: test_new_command.py
app/agents/resume-analyzer/rendercv/tests/cli/render_command/: test_parse_override_arguments.py  test_progress_panel.py  test_render_command.py  test_run_rendercv.py  test_watcher.py
app/agents/resume-analyzer/rendercv/tests/renderer/: conftest.py  test_html.py  test_markdown.py  test_path_resolver.py  test_pdf_png.py  test_typst.py
app/agents/resume-analyzer/rendercv/tests/renderer/templater/: test_connections.py  test_date.py  test_entry_templates_from_input.py  test_footer_and_top_note.py  test_markdown_parser.py  test_model_processor.py  test_string_processor.py
app/agents/resume-analyzer/rendercv/tests/schema/: conftest.py  test_json_schema_generator.py  test_override_dictionary.py  test_pydantic_error_handling.py  test_rendercv_model_builder.py  test_sample_generator.py  test_variant_pydantic_model_generator.py  test_yaml_reader.py
app/agents/resume-analyzer/rendercv/tests/schema/models/: test_path.py  test_validation_context.py
app/agents/resume-analyzer/rendercv/tests/schema/testdata/: input_file.yaml
(+222 files in other folders)
