[project]
name = "ats-proof"
version = "1.0.0"
description = "ATS compatibility testing suite for Superplaced AI CV"
requires-python = ">=3.12"
dependencies = [
    "superplaced-cv[full]",
    "ruamel-yaml>=0.18",
    "pymupdf>=1.24",
    "httpx>=0.27",
]

[tool.uv.sources]
superplaced-cv = { workspace = true }
